this is the code with the issue and also the removal of the explicit need for a service locator

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Configuration\Dsl\ServiceConfiguratorBase.cs" />
     <Compile Include="Exceptions\CouldntFindServiceException.cs" />
     <Compile Include="Model\Extensions.cs" />
+    <Compile Include="Model\ServiceBuilder.cs" />
     <Compile Include="TopshelfDispatcher.cs" />
     <Compile Include="Model\ControllerDelegates.cs" />
     <Compile Include="Model\IServiceControllerOf.cs" />
