latest build of uppercut to get Git versioning

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -6,13 +6,14 @@
   <!-- PROJECT VARIABLES -->
   <property name="project.name" value="Topshelf" overwrite="false" />
   <property name="path_to_solution" value=".\src" overwrite="false" />
-  <property name="repository.path" value="http://topshelf.googlecode.com/svn/" overwrite="false" />
+  <property name="repository.path" value="git://github.com/phatboyg/Topshelf.git" overwrite="false" />
   <property name="company.name" value="CFT &amp; ACM" overwrite="false" />
   <!-- folders -->
   <property name="folder.database" value="${project.name}.Database" overwrite="false" />
   <property name="folder.reports" value="${project.name}.Reports" overwrite="false" />
   <property name="folder.deployment" value="deployment" overwrite="false" />
   <property name="folder.documentation" value="docs" overwrite="false" />
+  <property name="folder.references" value="lib" overwrite="false" />
   <property name="folder.build_scripts" value="build" overwrite="false" />
   <property name="folder.build_scripts_custom" value="build.custom" overwrite="false" />
   <property name="folder.code_build" value="build_output" overwrite="false" />
@@ -29,7 +30,7 @@
   <!-- test.framework: mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
   <property name="test.framework" value="nunit" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git -->
-  <property name="source_control_type" value="svn" overwrite="false" />
+  <property name="source_control_type" value="git" overwrite="false" />
 
   <!-- ASSEMBLY VARIABLES -->
   <property name="version.major" value="0" overwrite="false" />
@@ -45,13 +46,13 @@
   <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.ncover" value="..\..\lib\NCover\NCover.Console.exe" overwrite="false" />
-  <property name="app.ncover_explorer" value="..\..\lib\NCover\NCoverExplorer.Console.exe" overwrite="false" />
-  <property name="app.ncover.tester" value="..\..\lib\MbUnit2\MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
-  <property name="app.ncover.tester" value="..\..\lib\NUnit\nunit-console.exe" overwrite="false" if="${test.framework=='nunit'}" />
+  <property name="app.ncover" value="..\..\${folder.references}\NCover\NCover.Console.exe" overwrite="false" />
+  <property name="app.ncover_explorer" value="..\..\${folder.references}\NCover\NCoverExplorer.Console.exe" overwrite="false" />
+  <property name="app.ncover.tester" value="..\..\${folder.references}\MbUnit2\MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
+  <property name="app.ncover.tester" value="..\..\${folder.references}\NUnit\nunit-console.exe" overwrite="false" if="${test.framework=='nunit'}" />
   <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
-  <property name="app.moma" value="..\..\lib\MoMA\MoMA.exe" overwrite="false" />
+  <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
   <property name="msbuild.configuration" value="Release" overwrite="false" />
