--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -91,7 +91,17 @@
     <Compile Include="Configuration\Dsl\IsolatedServiceConfigurator.cs" />
     <Compile Include="Configuration\Dsl\ServiceConfiguratorBase.cs" />
     <Compile Include="Exceptions\CouldntBuildServiceException.cs" />
+    <Compile Include="HostPipeline.cs" />
+    <Compile Include="Hosts\CommandLineHost.cs" />
+    <Compile Include="Hosts\Host.cs" />
+    <Compile Include="Hosts\WinServiceHost.cs" />
+    <Compile Include="Hosts\IServiceControllerFactory.cs" />
+    <Compile Include="Kernel32.cs" />
+    <Compile Include="Messages\ErrorMessage.cs" />
     <Compile Include="Model\ServiceBuilder.cs" />
+    <Compile Include="ProcessExtensions.cs" />
+    <Compile Include="Hosts\ScmServiceController.cs" />
+    <Compile Include="Hosts\HostFactory.cs" />
     <Compile Include="Shelving\Bootstrapper.cs" />
     <Compile Include="Shelving\Shelf.cs" />
     <Compile Include="Shelving\ShelfMaker.cs" />
