removing the isolated stuff in favor of the new 'shelving'

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -81,24 +81,23 @@
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\RunCommand.cs" />
     <Compile Include="Commands\InstallService.cs" />
-    <Compile Include="ServiceName.cs" />
+    <Compile Include="Configuration\ServiceName.cs" />
     <Compile Include="Commands\UninstallService.cs" />
     <Compile Include="Configuration\Dsl\ActivatorServiceLocator.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Configuration\Dsl\IIsolatedServiceConfigurator.cs" />
-    <Compile Include="Configuration\Dsl\IsolatedServiceConfigurator.cs" />
     <Compile Include="Configuration\Dsl\ServiceConfiguratorBase.cs" />
     <Compile Include="Exceptions\CouldntBuildServiceException.cs" />
     <Compile Include="HostPipeline.cs" />
     <Compile Include="Hosts\CommandLineHost.cs" />
     <Compile Include="Hosts\Host.cs" />
     <Compile Include="Hosts\WinServiceHost.cs" />
-    <Compile Include="Kernel32.cs" />
+    <Compile Include="WindowsServiceCode\Kernel32.cs" />
     <Compile Include="Messages\ErrorMessage.cs" />
     <Compile Include="Model\ServiceBuilder.cs" />
     <Compile Include="ProcessExtensions.cs" />
-    <Compile Include="ServiceActions.cs" />
+    <Compile Include="Configuration\ServiceActions.cs" />
     <Compile Include="Shelving\Bootstrapper.cs" />
     <Compile Include="Shelving\Shelf.cs" />
     <Compile Include="Shelving\ShelfMaker.cs" />
@@ -106,11 +105,7 @@
     <Compile Include="TopshelfDispatcher.cs" />
     <Compile Include="Model\ControllerDelegates.cs" />
     <Compile Include="Model\IServiceControllerOf.cs" />
-    <Compile Include="Model\IsolatedServiceController.cs" />
-    <Compile Include="Model\FacadeToIsolatedServiceController.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
-    <Compile Include="Model\IsolatedServiceControllerWrapper.cs" />
-    <Compile Include="Model\ServiceControllerProxy.cs" />
     <Compile Include="Model\ServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\RunnerConfigurator.cs" />
     <Compile Include="Model\IServiceCoordinator.cs" />
