--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -124,7 +124,7 @@
     <Compile Include="Messages\ErrorMessage.cs" />
     <Compile Include="Model\ServiceBuilder.cs" />
     <Compile Include="ProcessExtensions.cs" />
-    <Compile Include="Configuration\ServiceActions.cs" />
+    <Compile Include="Configuration\ServiceActionNames.cs" />
     <Compile Include="Shelving\Bootstrapper.cs" />
     <Compile Include="Shelving\Shelf.cs" />
     <Compile Include="Shelving\ShelfMaker.cs" />
