cleaning up files and log messages

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -86,6 +86,7 @@
     </Compile>
     <Compile Include="Bottles\BottleException.cs" />
     <Compile Include="Bottles\BottleService.cs" />
+    <Compile Include="Bottles\BottleServiceBootstrapper.cs" />
     <Compile Include="Bottles\BottleWatcher.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\RunCommand.cs" />
@@ -117,6 +118,7 @@
     <Compile Include="Shelving\ShelfHandle.cs" />
     <Compile Include="Shelving\ShelfState.cs" />
     <Compile Include="Shelving\ShelfStateChangedEventArgs.cs" />
+    <Compile Include="SpecialLoggers.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Configuration\Dsl\IIsolatedServiceConfigurator.cs" />
