Changed path to Topshelf organization

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -6,7 +6,7 @@
   <!-- Required Items -->
   <property name="project.name" value="Topshelf" overwrite="false" />
   <property name="path_to_solution" value=".\src" overwrite="false" />
-  <property name="repository.path" value="git://github.com/phatboyg/Topshelf.git" overwrite="false" />
+  <property name="repository.path" value="git://github.com/Topshelf/Topshelf.git" overwrite="false" />
   <property name="company.name" value="CFT &amp; ACM" overwrite="false" />
   <!-- folders -->
   <property name="folder.database" value="${project.name}.Database" overwrite="false" />
