cleaning up the build and setting up ilmerge

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -23,12 +23,12 @@
   <property name="folder.file_server" value="file.server" overwrite="false" />
 
   <!-- FRAMEWORKS -->
-  <!-- microsoft.framework: vb6, net-1.1, net-2.0, net-3.5, net-4.0  -->
+  <!-- microsoft.framework (NOT the version you may be targeting!): vb6, net-1.1, net-2.0, net-3.5, net-4.0 (Enter multiple ones with a "," to take advantage of multitargeting) -->
   <property name="microsoft.framework" value="net-3.5" overwrite="false" />
   <!-- language.short: vb,cs -->
   <property name="language.short" value="cs" overwrite="false" />
   <!-- test.framework: none, mbunit2, nunit, gallio - with gallio it must be installed in program files on every computer. Alternatively you can add 26MB to your repo and put it there. Little much for my tastes. -->
-  <property name="test.framework" value="nunit" overwrite="false" />
+  <property name="test.framework" value="none" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
 
@@ -47,6 +47,8 @@
   <!-- COMPILE VARIABLES -->
   <property name="msbuild.configuration" value="Release" overwrite="false" />
   <property name="msbuild.platform" value="Any CPU" overwrite="false" />
+  <!-- This setting allows you to use your own output path by setting to false - this does not work in conjuction with multitargeting -->
+  <property name="msbuild.override_output_path" value="true" overwrite="false" />
 
   <!-- POLICIES -->
   <property name="file.installation_document" value="..\${folder.documentation}\Installation\${project.name}Installation.doc" overwrite="false" />
@@ -63,6 +65,8 @@
   <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
   <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
+  <property name="app.nitriq" value="C:\Program Files (x86)\NimblePros\Nitriq Console + Pro\Nitriq.Console.exe" overwrite="false" />
   <property name="allow.powershell.unrestricted" value="false" overwrite="false" />
+  <property name="run.ilmerge" value="true" overwrite="false" />
 
 </project>
