--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -5,7 +5,7 @@
 
   <!-- Required Items -->
   <property name="project.name" value="Topshelf" overwrite="false" />
-  <property name="path_to_solution" value=".\src" overwrite="false" />
+  <property name="path_to_solution" value="src" overwrite="false" />
   <property name="repository.path" value="git://github.com/Topshelf/Topshelf.git" overwrite="false" />
   <property name="company.name" value="CFT &amp; ACM" overwrite="false" />
   <!-- folders -->
@@ -31,10 +31,15 @@
   <property name="test.framework" value="nunit" overwrite="false" />
   <!-- source_control_type: svn, vss, tfs, vault, git, hg -->
   <property name="source_control_type" value="git" overwrite="false" />
-
+  
+  <!-- Environment spesific variables -->
+  <property name="path.separator" value="${string::trim(path::combine(' ', ' '))}" />
+  
   <!-- ASSEMBLY VARIABLES -->
+  <property name="version.use_semanticversioning" value="true" overwrite="false" />
   <property name="version.major" value="2" overwrite="false" />
   <property name="version.minor" value="0" overwrite="false" />
+  <property name="version.patch" value="0" overwrite="false" />
   <property name="assembly.description" value="${project.name} is a product of ${company.name} - ${repository.path}." overwrite="false" />
   <property name="assembly.clscompliant" value="true" overwrite="false" />
   <!-- partially trusted callers doesn't set correctly with assembly generator - Leave false for now-->
@@ -42,7 +47,7 @@
   <property name="sign.project_with_key" value="false" overwrite="false" />
   <!-- To use relative pathing your projects all need to be at the same level. -->
   <property name="sign.key.use_relative_pathing" value="false" overwrite="false" />
-  <property name="sign.key.relative_path_from_projects" value="..\..\" overwrite="false" />
+  <property name="sign.key.relative_path_from_projects" value="..${path.separator}..${path.separator}" overwrite="false" />
 
   <!-- COMPILE VARIABLES -->
   <property name="msbuild.configuration" value="Release" overwrite="false" />
@@ -51,16 +56,16 @@
   <property name="msbuild.override_output_path" value="true" overwrite="false" />
 
   <!-- POLICIES -->
-  <property name="file.installation_document" value="..\${folder.documentation}\Installation\${project.name}Installation.doc" overwrite="false" />
+  <property name="file.installation_document" value="..${path.separator}${folder.documentation}${path.separator}Installation${path.separator}${project.name}Installation.doc" overwrite="false" />
   <property name="fail.if_no_installation_document" value="false" overwrite="false" />
   <!-- EXTERNAL TOOLS -->
   <!-- These are run two folders down from the top level folder, so figure out the relative path from there and add "..\..\" -->
   <!-- In example, if from the top level directory, you have an item that is in lib\NCover\NCover.Console.exe you should add it here as ..\..\lib\NCover\NCover.Console.exe  -->
   <!-- To not use the tool, change to a location that doesn't exist -->
-  <property name="app.nunit.console" value="..\..\${folder.references}\NUnit\nunit-console.exe" overwrite="false" />
-  <property name="app.ncover" value="..\..\${folder.references}\NCover\NCover.Console.exe" overwrite="false" />
-  <property name="app.ncover_explorer" value="..\..\${folder.references}\NCover\NCoverExplorer.Console.exe" overwrite="false" />
-  <property name="app.ncover.tester" value="..\..\${folder.references}\MbUnit2\MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
+  <property name="app.nunit.console" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NUnit${path.separator}nunit-console.exe" overwrite="false" />
+  <property name="app.ncover" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCover.Console.exe" overwrite="false" />
+  <property name="app.ncover_explorer" value="..${path.separator}..${path.separator}${folder.references}${path.separator}NCover${path.separator}NCoverExplorer.Console.exe" overwrite="false" />
+  <property name="app.ncover.tester" value="..${path.separator}..${path.separator}${folder.references}${path.separator}MbUnit2${path.separator}MbUnit.Cons.exe" overwrite="false" if="${test.framework=='mbunit2'}" />
   <property name="app.ncover.tester" value="${app.nunit.console}" overwrite="false" if="${test.framework=='nunit'}" />
   <property name="app.ncover.tester" value="C:\Program Files (x86)\Gallio\bin\Gallio.Host.exe" overwrite="false" if="${test.framework=='gallio'}" />
   <property name="app.ndepend" value="C:\Program Files\NDepend\NDepend.Console.exe" overwrite="false" />
