--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -91,29 +91,38 @@
     <Compile Include="FileSystem\DirectoryMonitor.cs" />
     <Compile Include="FileSystem\DirectoryMonitorBootstrapper.cs" />
     <Compile Include="Messages\ContinueService.cs" />
-    <Compile Include="Messages\FileSystemChange.cs" />
+    <Compile Include="Messages\ReloadService.cs" />
+    <Compile Include="Messages\ServiceFolderChanged.cs" />
     <Compile Include="Messages\PauseService.cs" />
-    <Compile Include="Messages\ReadyService.cs" />
-    <Compile Include="Messages\ServiceContinued.cs" />
+    <Compile Include="Messages\CreateService.cs" />
     <Compile Include="Messages\ServiceContinuing.cs" />
-    <Compile Include="Messages\ServiceMessage.cs" />
+    <Compile Include="Messages\ServiceEvent.cs" />
+    <Compile Include="Messages\ServiceEventType.cs" />
+    <Compile Include="Messages\ServiceCommand.cs" />
     <Compile Include="Messages\ServicePaused.cs" />
     <Compile Include="Messages\ServicePausing.cs" />
-    <Compile Include="Messages\ServiceReady.cs" />
-    <Compile Include="Messages\ServiceStarted.cs" />
+    <Compile Include="Messages\ServiceCreated.cs" />
+    <Compile Include="Messages\ServiceRunning.cs" />
     <Compile Include="Messages\ServiceStopped.cs" />
+    <Compile Include="Messages\ShelfEvent.cs" />
+    <Compile Include="Messages\ShelfEventType.cs" />
     <Compile Include="Messages\ShelfFault.cs" />
-    <Compile Include="Messages\ShelfReady.cs" />
+    <Compile Include="Messages\ShelfCreated.cs" />
     <Compile Include="Messages\ServiceStarting.cs" />
     <Compile Include="Messages\ServiceStopping.cs" />
     <Compile Include="Messages\StartService.cs" />
     <Compile Include="Messages\StopService.cs" />
-    <Compile Include="Shelving\HostHost.cs" />
-    <Compile Include="Shelving\HostProxy.cs" />
+    <Compile Include="Messages\UnloadService.cs" />
+    <Compile Include="Shelving\InboundChannel.cs" />
+    <Compile Include="Shelving\OutboundChannel.cs" />
+    <Compile Include="Shelving\IShelfServiceController.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
-    <Compile Include="Shelving\ShelfHandle.cs" />
+    <Compile Include="Shelving\ShelfReference.cs" />
+    <Compile Include="Shelving\ShelfService.cs" />
+    <Compile Include="Shelving\ShelfServiceBinding.cs" />
+    <Compile Include="Shelving\ShelfServiceController.cs" />
     <Compile Include="Shelving\ShelfState.cs" />
-    <Compile Include="Shelving\ShelfStateChangedEventArgs.cs" />
+    <Compile Include="Shelving\ShelfType.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Configuration\Dsl\IIsolatedServiceConfigurator.cs" />
