--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -91,7 +91,9 @@
     <Compile Include="FileSystem\DirectoryMonitor.cs" />
     <Compile Include="FileSystem\DirectoryMonitorBootstrapper.cs" />
     <Compile Include="Messages\ContinueService.cs" />
+    <Compile Include="Messages\CreateShelfService.cs" />
     <Compile Include="Messages\ReloadService.cs" />
+    <Compile Include="Messages\ServiceFault.cs" />
     <Compile Include="Messages\ServiceFolderChanged.cs" />
     <Compile Include="Messages\PauseService.cs" />
     <Compile Include="Messages\CreateService.cs" />
