--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -107,7 +107,6 @@
     <Compile Include="Messages\ServiceRunning.cs" />
     <Compile Include="Messages\ServiceStopped.cs" />
     <Compile Include="Messages\ShelfEvent.cs" />
-    <Compile Include="Messages\ShelfEventType.cs" />
     <Compile Include="Messages\ShelfFault.cs" />
     <Compile Include="Messages\ShelfCreated.cs" />
     <Compile Include="Messages\ServiceStarting.cs" />
@@ -118,6 +117,8 @@
     <Compile Include="Shelving\InboundChannel.cs" />
     <Compile Include="Shelving\OutboundChannel.cs" />
     <Compile Include="Shelving\IShelfServiceController.cs" />
+    <Compile Include="Model\ServiceStateMachine.cs" />
+    <Compile Include="Model\ServiceBinding.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
     <Compile Include="Shelving\ShelfReference.cs" />
     <Compile Include="Shelving\ShelfService.cs" />
@@ -140,21 +141,20 @@
     <Compile Include="Shelving\Bootstrapper.cs" />
     <Compile Include="Shelving\Shelf.cs" />
     <Compile Include="Shelving\ShelfMaker.cs" />
-    <Compile Include="Shelving\WellknownAddresses.cs" />
+    <Compile Include="Model\AddressRegistry.cs" />
     <Compile Include="TopshelfDispatcher.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
     <Compile Include="Model\ServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\RunnerConfigurator.cs" />
     <Compile Include="Model\IServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\IRunnerConfigurator.cs" />
-    <Compile Include="Model\IServiceController.cs" />
+    <Compile Include="Model\IService.cs" />
     <Compile Include="Configuration\Dsl\IServiceConfigurator.cs" />
-    <Compile Include="Model\ServiceController.cs" />
+    <Compile Include="Model\Service.cs" />
     <Compile Include="Configuration\Dsl\ServiceConfigurator.cs" />
     <Compile Include="TopshelfArgumentParser.cs" />
     <Compile Include="TopshelfArguments.cs" />
     <Compile Include="Model\ServiceInformation.cs" />
-    <Compile Include="Model\ServiceState.cs" />
     <Compile Include="Configuration\Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="WindowsServiceCode\HostServiceInstaller.cs">
