This still hurts

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -114,23 +114,23 @@
     <Compile Include="Messages\StartService.cs" />
     <Compile Include="Messages\StopService.cs" />
     <Compile Include="Messages\UnloadService.cs" />
+    <Compile Include="ServiceCoordinator.cs" />
     <Compile Include="Shelving\InboundChannel.cs" />
     <Compile Include="Shelving\OutboundChannel.cs" />
-    <Compile Include="Shelving\IShelfServiceController.cs" />
+    <Compile Include="Shelving\IServiceCoordinator.cs" />
     <Compile Include="Model\ServiceStateMachine.cs" />
-    <Compile Include="Model\ServiceBinding.cs" />
+    <Compile Include="Model\ServiceStateMachineBinding.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
     <Compile Include="Shelving\ShelfReference.cs" />
     <Compile Include="Shelving\ShelfService.cs" />
-    <Compile Include="Shelving\ShelfServiceBinding.cs" />
-    <Compile Include="Shelving\ShelfServiceController.cs" />
+    <Compile Include="Shelving\ServiceStateMachineBinding.cs" />
     <Compile Include="Shelving\ShelfState.cs" />
     <Compile Include="Shelving\ShelfType.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Configuration\Dsl\IIsolatedServiceConfigurator.cs" />
     <Compile Include="Configuration\Dsl\ServiceConfiguratorBase.cs" />
-    <Compile Include="Exceptions\CouldntBuildServiceException.cs" />
+    <Compile Include="Exceptions\BuildServiceException.cs" />
     <Compile Include="Hosts\CommandLineHost.cs" />
     <Compile Include="Hosts\Host.cs" />
     <Compile Include="Hosts\WinServiceHost.cs" />
@@ -144,13 +144,13 @@
     <Compile Include="Model\AddressRegistry.cs" />
     <Compile Include="TopshelfDispatcher.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
-    <Compile Include="Model\ServiceCoordinator.cs" />
+    <Compile Include="Model\OldServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\RunnerConfigurator.cs" />
-    <Compile Include="Model\IServiceCoordinator.cs" />
+    <Compile Include="Model\IOldServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\IRunnerConfigurator.cs" />
     <Compile Include="Model\IService.cs" />
     <Compile Include="Configuration\Dsl\IServiceConfigurator.cs" />
-    <Compile Include="Model\Service.cs" />
+    <Compile Include="Model\ServiceController.cs" />
     <Compile Include="Configuration\Dsl\ServiceConfigurator.cs" />
     <Compile Include="TopshelfArgumentParser.cs" />
     <Compile Include="TopshelfArguments.cs" />
