--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Messages\ContinueService.cs" />
     <Compile Include="Messages\CreateShelfService.cs" />
     <Compile Include="Messages\RestartService.cs" />
+    <Compile Include="Messages\ServiceCompleted.cs" />
     <Compile Include="Messages\ServiceFault.cs" />
     <Compile Include="Messages\ServiceFolderChanged.cs" />
     <Compile Include="Messages\PauseService.cs" />
@@ -107,6 +108,7 @@
     <Compile Include="Messages\ServiceRestarting.cs" />
     <Compile Include="Messages\ServiceRunning.cs" />
     <Compile Include="Messages\ServiceStopped.cs" />
+    <Compile Include="Messages\ServiceUnloaded.cs" />
     <Compile Include="Messages\ShelfEvent.cs" />
     <Compile Include="Messages\ShelfFault.cs" />
     <Compile Include="Messages\ShelfCreated.cs" />
