Oh yeah, logging, shelves, oh my

--- a/src/Topshelf.Host/log4net.config
+++ b/src/Topshelf.Host/log4net.config
@@ -25,13 +25,13 @@
     </layout>
   </appender>
 
+
   <appender name="LogFileAppender"
         type="log4net.Appender.RollingFileAppender" >
-    <param name="File"
-         value="..\log\Topshelf.Host.log" />
     <param name="AppendToFile"
          value="false" />
-    <rollingStyle value="Size" />
+		<file type="log4net.Util.PatternString" value="..\log\Topshelf.Host.%appdomain.log" />
+		<rollingStyle value="Size" />
     <maxSizeRollBackups value="4" />
     <maximumFileSize value="10MB" />
     <staticLogFileName value="true" />
