--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -125,7 +125,7 @@
     <Compile Include="Model\ServiceStateMachineBinding.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
     <Compile Include="Shelving\ShelfReference.cs" />
-    <Compile Include="Shelving\ShelfService.cs" />
+    <Compile Include="Shelving\ShelfServiceController.cs" />
     <Compile Include="Shelving\ShelfState.cs" />
     <Compile Include="Shelving\ShelfType.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
@@ -144,9 +144,7 @@
     <Compile Include="Model\AddressRegistry.cs" />
     <Compile Include="TopshelfDispatcher.cs" />
     <Compile Include="Configuration\RunConfiguration.cs" />
-    <Compile Include="Model\OldServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\RunnerConfigurator.cs" />
-    <Compile Include="Model\IOldServiceCoordinator.cs" />
     <Compile Include="Configuration\Dsl\IRunnerConfigurator.cs" />
     <Compile Include="Model\IServiceController.cs" />
     <Compile Include="Configuration\Dsl\IServiceConfigurator.cs" />
@@ -154,7 +152,6 @@
     <Compile Include="Configuration\Dsl\ServiceConfigurator.cs" />
     <Compile Include="TopshelfArgumentParser.cs" />
     <Compile Include="TopshelfArguments.cs" />
-    <Compile Include="Model\ServiceInformation.cs" />
     <Compile Include="Configuration\Credentials.cs" />
     <Compile Include="Exceptions\ConfigurationException.cs" />
     <Compile Include="WindowsServiceCode\HostServiceInstaller.cs">
