--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Messages\StopService.cs" />
     <Compile Include="Messages\UnloadService.cs" />
     <Compile Include="Model\ServiceCoordinator.cs" />
+    <Compile Include="Shelving\ChannelBase.cs" />
     <Compile Include="Shelving\InboundChannel.cs" />
     <Compile Include="Shelving\OutboundChannel.cs" />
     <Compile Include="Model\IServiceCoordinator.cs" />
