Cleanup of project a bit, still working happy path

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -109,26 +109,22 @@
     <Compile Include="Messages\ServiceRunning.cs" />
     <Compile Include="Messages\ServiceStopped.cs" />
     <Compile Include="Messages\ServiceUnloaded.cs" />
-    <Compile Include="Messages\ShelfEvent.cs" />
-    <Compile Include="Messages\ShelfFault.cs" />
-    <Compile Include="Messages\ShelfCreated.cs" />
     <Compile Include="Messages\ServiceStarting.cs" />
     <Compile Include="Messages\ServiceStopping.cs" />
     <Compile Include="Messages\StartService.cs" />
     <Compile Include="Messages\StopService.cs" />
     <Compile Include="Messages\UnloadService.cs" />
+    <Compile Include="Model\InboundChannel.cs" />
+    <Compile Include="Model\OutboundChannel.cs" />
     <Compile Include="Model\ServiceChannel.cs" />
+    <Compile Include="Model\ServiceChannelBase.cs" />
     <Compile Include="Model\ServiceCoordinator.cs" />
-    <Compile Include="Shelving\ServiceChannelBase.cs" />
-    <Compile Include="Shelving\InboundChannel.cs" />
-    <Compile Include="Shelving\OutboundChannel.cs" />
     <Compile Include="Model\IServiceCoordinator.cs" />
     <Compile Include="Model\ServiceStateMachine.cs" />
     <Compile Include="Model\ServiceStateMachineBinding.cs" />
     <Compile Include="Shelving\ShelfConfiguration.cs" />
     <Compile Include="Shelving\ShelfReference.cs" />
     <Compile Include="Shelving\ShelfServiceController.cs" />
-    <Compile Include="Shelving\ShelfState.cs" />
     <Compile Include="Shelving\ShelfType.cs" />
     <Compile Include="WindowsServiceCode\WinServiceHelper.cs" />
     <Compile Include="Extensions.cs" />
