Making test have failure options

--- a/src/Samples/StuffOnAShelf/clock.config
+++ b/src/Samples/StuffOnAShelf/clock.config
@@ -8,5 +8,8 @@
   
   <appSettings>
     <add key="name" value="Coocoo" />
+
+		<!-- There are several bad tidings that can be performed: failToCreate, failToStart, crashAfterStart -->
+		<add key="badTidings" value="none" />
   </appSettings>
 </configuration>
