--- a/src/Topshelf.Specs/Topshelf.Specs.csproj
+++ b/src/Topshelf.Specs/Topshelf.Specs.csproj
@@ -119,6 +119,7 @@
     </Compile>
     <Compile Include="ServiceTests\Bob.cs" />
     <Compile Include="ShelfConfiguration_Specs.cs" />
+    <Compile Include="TestChannel.cs" />
     <Compile Include="TestObject\TestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestObject\TestService2.cs" />
