Added UAC support for install/uninstall command line options

--- a/src/Topshelf.Host/log4net.config
+++ b/src/Topshelf.Host/log4net.config
@@ -29,7 +29,7 @@
   <appender name="LogFileAppender"
         type="log4net.Appender.RollingFileAppender" >
     <param name="AppendToFile"
-         value="false" />
+         value="true" />
 		<file type="log4net.Util.PatternString" value="..\log\Topshelf.Host.%appdomain.log" />
 		<rollingStyle value="Size" />
     <maxSizeRollBackups value="4" />
